terraform/base/network.tf

# resource "aws_vpc" "network" {
#   cidr_block       = var.vpc_cidr
#   instance_tenancy = "default"
#
#   tags = {
#     Name = var.vpc_name
#   }
# }
